<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/content_blocking">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:enabled="false"
            app:key="adult_content"
            app:summary="@string/adult_content_summary"
            app:title="@string/adult_content" />


        <SwitchPreferenceCompat
            app:key="yt_shorts"
            app:summary="@string/yt_shorts_summary"
            app:title="@string/yt_shorts" />

        <SwitchPreferenceCompat
            app:key="unsupported_browser"
            app:summary="@string/unsupported_browser_summary"
            app:title="@string/unsupported_browser" />

        <!--        <EditTextPreference-->
        <!--            app:key="signature"-->
        <!--            app:title="@string/signature_title"-->
        <!--            app:useSimpleSummaryProvider="true" />-->

        <!--        <ListPreference-->
        <!--            app:defaultValue="reply"-->
        <!--            app:entries="@array/reply_entries"-->
        <!--            app:entryValues="@array/reply_values"-->
        <!--            app:key="reply"-->
        <!--            app:title="@string/reply_title"-->
        <!--            app:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/admin">

        <SwitchPreferenceCompat
            app:key="uninstall_protection"
            app:summary="@string/uninstall_protection_summary"
            app:title="@string/uninstall_protection" />
        <EditTextPreference
            app:dependency="uninstall_protection"
            app:key="uninstall_protection_limit"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="maintenance_mode"
            app:summary="@string/user_profile_change_summary"
            app:title="@string/user_profile" />
        <EditTextPreference
            android:inputType="phone"
            app:dependency="maintenance_mode"
            app:key="maintenance_mode_limit"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>